bat.string1.lessons.bat.string1.StringMatch.scala.error
stringMatch:5: error: an expression of type Null is ineligible for implicit conversion
  var b2:Boolean = null
                   ^stringMatch:5: error: type mismatch;
 found   : Null(null)
 required: Boolean
  var b2:Boolean = null
                   ^